# project-clockwise-r

./: .gitignore  README.md
chrono-r/: .gitignore  project.godot
chrono-r/resource-media/assets/gameplay/result-animation/animated/: result_animations.tres
chrono-r/resource-media/assets/scenes/: HitEffect.tscn  beatmap_item.tscn  circle.tscn  main_menu.tscn  nav_theme.tres  play.tscn  playfield.tscn  result_screen.tscn  song_selection.tscn  top_navbar.tscn
chrono-r/resource-media/assets/scenes/gdscript/: hit_effect.gd  hit_effect.gd.uid
chrono-r/resource-media/map/: Template-ChronoR-BeatMap-MILAPN-X.csv
chrono-r/resource-media/map/bitter-times/: map.csv
chrono-r/resource-media/map/demo-map/hui/: Template-ChronoR-BeatMap-hui.csv
chrono-r/resource-media/map/demo-map/zzz-come-alive/: Template-ChronoR-BeatMap-ZZZ.csv
chrono-r/resource-media/map/hui/: map.csv
chrono-r/resource-media/map/tutorial/: audio.sm  map.csv
source-code/: CMakeLists.txt
source-code/src/: BeatmapItem.cpp  BeatmapItem.h  BeatmapStructs.h  GameGlobal.h  JuceAudioEngine.cpp  JuceAudioEngine.h  JuceTestNode.cpp  JuceTestNode.h  MainMenuController.cpp  MainMenuController.h  NavbarController.cpp  NavbarController.h  ResultController.cpp  ResultController.h  RhythmCircle.cpp  RhythmCircle.h  RhythmGameController.cpp  RhythmGameController.h  SongSelectController.cpp  SongSelectController.h  register_types.cpp
